--- a/personalwebsitestyle.css
+++ b/personalwebsitestyle.css
@@ -1,4 +1,4 @@
-@font-face {
+/*@font-face {
   font-family: Qontra;
   src: url(Qontra.otf);
 }
@@ -6,7 +6,7 @@
 @font-face {
   font-family: HankenLight;
   src: url(Hanken-Light.ttf);
-}
+}*/
 
 :root {
   /*--background: #015961;*/
