add navbar, fix spacing a bit

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,33 @@
     font-family: Helvetica, sans-serif;
     font-weight: lighter;
   }
+
+  .split-page{
+    display: flex;
+    height: 100%; /* Ensures the container takes up full height */
+    width: 100%;
+    overflow: hidden; /* Prevent scrolling */
+    }
   
+    .navbar {
+        width: 100%;
+        text-align: center;
+        
+        font-size: 20px;
+        position: fixed; /* Optional: makes the navbar stay on top when scrolling */
+        top: 0;
+        left: 0;
+    }
+
+  
+  /* Style the navigation bar links */
+  .navbar a {
+    float: left; /* Make sure that the links stay side-by-side */
+    padding: 12px 24px; /* Add some padding */
+    text-decoration: none; /* Remove underline */
+    color:#015961;
+  }
+
   /* Left side (image) */
   .left-side-cover {
     flex: 1;
@@ -24,6 +50,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  .profile-img {
+    width: 50%; /* Adjust the image size */
+    max-width: 500px;
+    object-fit: cover;
+    border: 5px solid #015961;
+
   }
 
   .left-side{
@@ -36,14 +70,6 @@
     flex-direction: column;   /* Ensure content is stacked vertically */
     justify-content: center;  /* Vertically center the content */
     height: 100vh;
-  }
-  
-  .profile-img {
-    width: 50%; /* Adjust the image size */
-    max-width: 500px;
-    object-fit: cover;
-    border: 5px solid #015961;
-
   }
   
   /* Right side (information) */
@@ -59,29 +85,23 @@
     height: 100vh;
   }
   
-  .right-side h1 {
+  h1 {
     font-size: 2.5rem;
     margin-bottom: 10px;
   }
 
-  .left-side h1 {
-    font-size: 2.5rem;
-    margin-bottom: 10px;
-  }
-  
-  .right-side h2 {
+  h2 {
     margin-top: 20px;
     font-size: 1.5rem;
   }
 
-  .left-side h2 {
-    margin-top: 20px;
-    font-size: 1.5rem;
+ h3, h4 {
+    font-weight: normal;
   }
-  
-  .p {
+
+  p {
     font-size: 1rem;
-    line-height: 1.5;
+    line-height: 1.25;
   }
   
   .right-side a {
@@ -113,10 +133,8 @@
     height: 100vh;             /* Take full viewport height */
     color: #fff;
   }
-  .left-side ul{
+  ul{
     list-style-type:none;
+    font-size: 1rem;
+    line-height: 1.25;
   }
-  .right-side ul{
-    list-style-type:none;
-  }
-  
